FIX: Fist icon resizing on smaller devices

--- a/src/app/home/topic-detail/topic-detail.component.sass
+++ b/src/app/home/topic-detail/topic-detail.component.sass
@@ -155,4 +155,8 @@
       text-decoration: none
       transition: all .2s ease
 
+      @media (screen and max-width: 500px)
+        font-size: 0.9em
+
+
 
